hphp/hack/test/typecheck/reified_generics/no_shape_keys_generics.php
<?hh // strict

class C {
  const string A = "key_c";
}

function f<reify T as C>(): void {
  $x = shape(
    T::A => 4
  );
}
